add flexbox to containers, add textarea

--- a/index.html
+++ b/index.html
@@ -31,13 +31,11 @@
 
           <label>
             Select one
-            <select name="select" id="select">
-              <option value="">Please select an option</option>
-              <option value="opt1">Option one</option>
-              <option value="opt2">Option two</option>
-              <option value="opt3">option three</option>
-              <option value="opt4">option four</option>
-            </select>
+            <textarea
+              name="textArea"
+              id="textArea"
+              placeholder="Enter an optional message"
+            ></textarea>
           </label>
         </div>
 
