--- a/index.html
+++ b/index.html
@@ -17,32 +17,37 @@
       </nav>
     </header>
     <main>
-      <form action="" id="form">
-        <div class="inputWrapper">
-          <label>
-            Name
-            <input type="text" name="name" id="nameInput" />
-          </label>
+      <section>
+        <h2>Form Section</h2>
+        <form action="" id="form">
+          <div class="inputWrapper">
+            <label>
+              Password
+              <input required hidden type="text" name="name" id="nameInput" />
+            </label>
 
-          <label>
-            Email
-            <input type="email" name="email" id="emailInput" />
-          </label>
+            <label>
+              Email
+              <input required type="email" name="email" id="emailInput" />
+            </label>
 
-          <label>
-            Select one
-            <textarea
-              name="textArea"
-              id="textArea"
-              placeholder="Enter an optional message"
-            ></textarea>
-          </label>
-        </div>
+            <label>
+              Select one
+              <textarea
+                name="textArea"
+                id="textArea"
+                placeholder="Enter an optional message"
+              ></textarea>
+            </label>
+          </div>
 
-        <div class="buttonWrapper">
-          <button id="submitButton">Submit</button>
-        </div>
-      </form>
+          <div class="buttonWrapper">
+            <button id="submitButton">Submit</button>
+          </div>
+        </form>
+      </section>
+
+      <section></section>
     </main>
     <footer></footer>
   </body>
