add section for block vs. inline elements

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </ul>
       </nav>
     </header>
+
     <main>
       <section id="heroSection">
         <div class="flexContainer" id="smallerDiv">
@@ -69,7 +70,7 @@
               </label>
 
               <label>
-                Select one
+                Send a message!
                 <textarea
                   name="optional"
                   id="optional"
@@ -82,6 +83,19 @@
               <button id="submitButton">Submit</button>
             </div>
           </form>
+        </div>
+      </section>
+
+      <section id="inline-v-block">
+        <p class="block">
+          Hey, I am an block p element. Some of the text will be black like
+          normal, but
+          <span id="blueSpan">this section is blue</span> due to an inline span.
+        </p>
+        <div class="block">also block but as a div</div>
+        <div class="block">
+          this is a block as well, but with
+          <a href="http://google.com">a link to google.</a>
         </div>
       </section>
     </main>
