add new section for resizable form

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <p>Used for smaller menus, etc.</p>
           <p>The extra size goes away when smaller screen.</p>
         </div>
+
         <div class="flexContainer">
           <h2 id="colorH2">
             These sections are containers in a flexbox, colored:
@@ -91,6 +92,7 @@
           Hey, I am an block p element. Some of the text will be black like
           normal, but
           <span id="blueSpan">this section is blue</span> due to an inline span.
+          I go 100% of parent unless overridden.
         </p>
         <div class="block">also block but as a div</div>
         <div class="block">
@@ -98,6 +100,8 @@
           <a href="http://google.com">a link to google.</a>
         </div>
       </section>
+
+      <section id="form-resize"></section>
     </main>
     <footer></footer>
   </body>
