--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
               <label>
                 Send a message!
                 <textarea
+                  autofocus
                   name="optional"
                   id="optional"
                   placeholder="Enter an optional message"
